--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "author": "Minh Doan <minhdpc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.16",
+    "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
