--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "author": "Minh Doan <minhdpc@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc && node ./dist/src/main.js",
+    "start": "nodemon -e ts --exec \"npm run build\""
+  },
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
